<resources>
    <string name="app_name">Çocuğum Nerede?</string>
    <string name="stitch_id">MONGO_DB_STITCH</string>
    <string name="sign_in">Giriş</string>
    <string name="sign_out">Çıkış</string>
    <string name="register">Kayıt</string>
    <string name="email">Eposta</string>
    <string name="name">Ad</string>
    <string name="surname">Soyad</string>
    <string name="family">Aile</string>
    <string name="cellphone">Telefon</string>
    <string name="password">Şifre</string>
    <string name="again">Tekrar</string>
    <string name="message">Mesaj</string>
    <string name="call">Arama</string>
    <string name="disconnect">Bağlantıyı Kes</string>
    <string name="copyright">Çocuğum Nerede?\nDamla KUŞKU &amp; Ertuğrul Berat ALLAHVERDİ</string>
    <string name="notification">Bildirim</string>

    <string name="settings">Ayarlarım</string>
    <string name="my_information">Bilgilerim</string>
    <string name="my_family">Ailem</string>
</resources>
