<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:id="@+id/activity_register"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/appLogo_register"
            android:layout_width="match_parent"
            android:layout_height="192dp"
            android:contentDescription="@string/app_name"
            app:srcCompat="@mipmap/logo" />

        <!--<android.support.v7.widget.AppCompatTextView
            android:id="@+id/loginAppText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/colorSecondaryDark"
            android:textSize="30sp"
            android:theme="@android:style/Widget.Material.Light.TextView" />-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_register"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableEnd="@drawable/ic_email"
                android:drawablePadding="10dp"
                android:drawableTint="@color/colorSecondaryDark"
                android:hint="@string/email"
                android:singleLine="true"
                android:theme="@style/Widget.MaterialComponents.TextInputEditText.FilledBox" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/name_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/ic_accountround"
                    android:drawablePadding="10dp"
                    android:drawableTint="@color/colorSecondaryDark"
                    android:hint="@string/name"
                    android:singleLine="true"
                    android:theme="@style/Widget.MaterialComponents.TextInputEditText.FilledBox" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/surname_register"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableEnd="@drawable/ic_accountround"
                    android:drawablePadding="10dp"
                    android:drawableTint="@color/colorSecondaryDark"
                    android:hint="@string/surname"
                    android:singleLine="true"
                    android:theme="@style/Widget.MaterialComponents.TextInputEditText.FilledBox" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/phone_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/ic_phone"
                    android:drawablePadding="10dp"
                    android:drawableTint="@color/colorSecondaryDark"
                    android:hint="@string/cellphone"
                    android:singleLine="true"
                    android:theme="@style/Widget.MaterialComponents.TextInputEditText.FilledBox" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/familypassword_register"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableEnd="@drawable/ic_people"
                    android:drawablePadding="10dp"
                    android:drawableTint="@color/colorSecondaryDark"
                    android:hint="@string/family"
                    android:singleLine="true"
                    android:theme="@style/Widget.MaterialComponents.TextInputEditText.FilledBox" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/password_register"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableEnd="@drawable/ic_lock"
                android:drawablePadding="10dp"
                android:drawableTint="@color/colorSecondaryDark"
                android:hint="@string/password"
                android:password="true"
                android:singleLine="true"
                android:theme="@style/Widget.MaterialComponents.TextInputEditText.FilledBox" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordAgain_register"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableEnd="@drawable/ic_lock"
                android:drawablePadding="10dp"
                android:drawableTint="@color/colorSecondaryDark"
                android:hint="@string/again"
                android:password="true"
                android:singleLine="true"
                android:theme="@style/Widget.MaterialComponents.TextInputEditText.FilledBox" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnsignin_register"
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableTint="@color/colorPrimary"
                android:text="@string/register"
                android:textSize="16sp"
                android:theme="@style/Widget.MaterialComponents.Button.Icon"
                app:icon="@drawable/ic_adduser" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>