<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/linearLayoutCompat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/appLogo_login"
            android:layout_width="match_parent"
            android:layout_height="265dp"
            android:contentDescription="@string/app_name"
            app:srcCompat="@mipmap/logo" />

        <!--<android.support.v7.widget.AppCompatTextView
            android:id="@+id/loginAppText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/colorSecondaryDark"
            android:textSize="30sp"
            android:theme="@android:style/Widget.Material.Light.TextView" />-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_login"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="10dp"
                android:drawableTint="@color/secondaryDarkColor"
                android:hint="@string/email"
                android:singleLine="true"
                android:theme="@style/Widget.MaterialComponents.TextInputEditText.FilledBox" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_login"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="10dp"
                android:drawableTint="@color/secondaryDarkColor"
                android:hint="@string/password"
                android:password="true"
                android:singleLine="true"
                android:theme="@style/Widget.MaterialComponents.TextInputEditText.FilledBox" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnregister_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/ViewAreaMargin"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_adduser"
                android:drawableTint="@color/colorPrimary"
                android:text="@string/register"
                app:icon="@drawable/ic_adduser" />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/btngsignin_login"
                style="@style/AppTheme"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:visibility="gone"/>

            <Button
                android:id="@+id/btnsignin_login"
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/ViewAreaMargin"
                android:layout_weight="1"
                android:drawablePadding="0dp"
                android:drawableTint="@color/colorPrimary"
                android:text="@string/sign_in"
                app:icon="@drawable/ic_forward" />
        </LinearLayout>
        <!--
        <LinearLayout
            android:id="@+id/sign_out_and_disconnect"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:visibility="gone"
            tools:visibility="visible">

            <Button
                android:id="@+id/btnsignout_login"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/sign_out" />

            <Button
                android:id="@+id/btndisconnect_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/disconnect" />
        </LinearLayout>
        -->
    </LinearLayout>

    <TextView
        android:id="@+id/copyright_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="12dp"
        android:text="@string/copyright"
        android:textAlignment="center"
        android:textColor="@color/colorSecondaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>