<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".InfoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/BottomAppBarPrimaryColor"
        android:orientation="vertical">

        <TextView
            android:id="@+id/info_viewText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/ViewAreaMargin"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/regular"
            android:paddingTop="@dimen/ViewAreaPadding"
            android:paddingBottom="@dimen/ViewAreaPadding"
            android:text="@string/my_information"
            android:textAlignment="center"
            android:textColor="@color/colorSecondaryDark"
            android:textSize="72sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryLight"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_info"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/ViewAreaMargin"
                android:layout_marginTop="@dimen/ViewAreaMargin"
                android:layout_marginEnd="@dimen/ViewAreaMargin">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_accountround"
                    android:drawableTint="@color/colorSecondaryDark"
                    android:hint="@string/name" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/surname_info"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/ViewAreaMargin"
                android:layout_marginEnd="@dimen/ViewAreaMargin">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_accountround"
                    android:drawableTint="@color/colorSecondaryDark"
                    android:hint="@string/surname" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cellphone_info"
                android:layout_marginStart="@dimen/ViewAreaMargin"
                android:layout_marginEnd="@dimen/ViewAreaMargin">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_phone"
                    android:drawableTint="@color/colorSecondaryDark"
                    android:hint="@string/cellphone" />
            </com.google.android.material.textfield.TextInputLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/save_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|right"
                    android:layout_marginEnd="@dimen/FloatingButtonMargin"
                    android:layout_marginBottom="@dimen/FloatingButtonMargin"
                    android:clickable="true"
                    android:tint="@color/BottomAppBarSecondaryColor"
                    app:backgroundTint="@color/BottomAppBarPrimaryColor"
                    app:rippleColor="@color/colorSecondaryDark"
                    app:srcCompat="@drawable/ic_save" />
            </ScrollView>
        </LinearLayout>

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>